force-app/main/default/objects/Species__c/fields/Light__c.field-meta.xml
<CustomField>
    <fullName>Light__c</fullName>
    <label>Light</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FULL SUN</fullName>
            </value>
            <value>
                <fullName>HALF SHADE</fullName>
            </value>
            <value>
                <fullName>INDIRECT</fullName>
            </value>
            <value>
                <fullName>DIRECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>