force-app/main/default/objects/Species__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NORTH AMERICA</fullName>
            </value>
            <value>
                <fullName>CENTRAL AMERICA</fullName>
            </value>
            <value>
                <fullName>SOUTH AMERICA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>AFRICA</fullName>
            </value>
            <value>
                <fullName>OCEANIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>