force-app/main/default/objects/Species__c/fields/Summer_Fertilization_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Summer_Fertilization_Frequency__c</fullName>
    <label>Summer Fertilization Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WEEKLY</fullName>
            </value>
            <value>
                <fullName>EVERY OTHER WEEK</fullName>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>