force-app/main/default/objects/Species__c/fields/Summering_Watering_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Summering_Watering_Frequency__c</fullName>
    <label>Summering Watering Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAILY</fullName>
            </value>
            <value>
                <fullName>TWICE PER WEEK</fullName>
            </value>
            <value>
                <fullName>WEEKLY</fullName>
            </value>
            <value>
                <fullName>EVERY OTHER WEEK</fullName>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>